--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
   <body>
     <div class="separator">
       <h1>1. Selector dan Styling Sederhana</h1>
-      <div>Saya adalah Box Berwarna Maroon</div>
-      <div>Saya adalah Box Berwarna Dark Blue</div>
-      <div>Saya adalah Box Berwarna Salem</div>
+      <div id="maroon-box" class="box-100">Saya adalah Box Berwarna Maroon</div>
+      <div id="dark-blue-box" class="box-100">Saya adalah Box Berwarna Dark Blue</div>
+      <div id="salem-box" class="box-100">Saya adalah Box Berwarna Salem</div>
     </div>
     <div class="separator">
       <h1>2. Selector Lebih Dari Satu</h1>
-      <div>Saya adalah Box Red berukuran 100</div>
-      <div>Saya juga Box Red tapi ukurannya 200</div>
-      <div>Saya adalah Box Blue berukuran 200</div>
-      <div>Saya juga berukuran 200 tapi warnanya Green</div>
+      <div class="box-100 red-background">Saya adalah Box Red berukuran 100</div>
+      <div class="box-200 red-background">Saya juga Box Red tapi ukurannya 200</div>
+      <div class="box-200 blue-background">Saya adalah Box Blue berukuran 200</div>
+      <div class="box-200 green-background">Saya juga berukuran 200 tapi warnanya Green</div>
     </div>
     <div class="separator">
       <h1>3. Selector Melalui Parent</h1>
-      <div>
+      <div class="box-list">
         <div>Desain saya diatur oleh Parent Saya</div>
         <div>Desain saya diatur oleh Parent Saya</div>
-        <div>Desain saya diatur oleh Parent Saya, tapi saya punya warna khusus, yaitu Gold!</div>
+        <div id="gold-box">Desain saya diatur oleh Parent Saya, tapi saya punya warna khusus, yaitu Gold!</div>
       </div>
     </div>
   </body>
